# CPURayTracer

./: Box.h  CMakeLists.txt  Camera.h  Engine.h  LinearAlgebra.h  Model.h  Octree.h  README.md  RayHit.h  Renderer.h  ResourceLoader.h  Texture.h  Triangle.h  Vertex.h  main.cpp
resources/: face.fbx  suzanne.blend  suzanne.blend1  suzanne.fbx
